# advent-of-code

./: .gitignore  .pylintrc  README.md  pyproject.toml
2020/day-05/: 5.2.py
2020/day-08/: 8.1.py
2020/day-19/: solution.py
2020/day-8/: 8.2.py
2021/day-01/: 1.1.py  output.txt  solution.py
2021/day-02/: output.txt  solution.py
2021/day-03/: output.txt  solution.py
2021/day-04/: solution.py
2021/day-06/: solution.py
2021/day-07/: output.txt  solution.py
2021/day-08/: output.txt  solution.py
2021/day-10/: output.txt  solution.py
2021/day-11/: output.txt
day-1/: 1.2.py
day-16/: 16.1.py  16.2.py
day-18/: 18.1.py
day-2/: 2.1.py  2.2.py
day-3/: 3.1.py  3.2.py
day-4/: 4.1.py  4.2.py
day-8/: 8.2.py
day-9/: 9.py
scripts/: create.py  run.py
utils/: analysis.py  data_structures.py  io.py  template.py  utils.py
y2020/day-01/: 1.1.py
y2020/day-06/: 6.1.py
y2020/day-07/: 7.1.py
y2020/day-14/: 14.py
y2020/day-15/: solution.py
y2020/day-18/: 18.2.py
y2021/day-05/: output.txt  solution.py
year-2020/day-05/: 5.1.py
year-2020/day-06/: 6.2.py
year-2020/day-10/: 10.1.py
year-2020/day-11/: 11.1.py  11.2.py
year-2021/day-09/: solution.py
year-2021/day_04/: output.txt
year-2021/day_06/: output.txt  solution.py
year_2020/day-12/: 12.py
year_2020/day-13/: 13.1.py
year_2021/day_01/: solution.py
year_2021/day_02/: solution.py
year_2021/day_03/: solution.py
year_2021/day_04/: solution.py
year_2021/day_05/: solution.py
year_2021/day_06/: solution.py
year_2021/day_07/: solution.py
year_2021/day_08/: solution.py
(+123 files in other folders)
