[tool.poetry]
name = "advent-of-code"
version = "1.0.0"
description = "Memories of Advent of Code"
authors = ["prgpascal <leschiutta.ricc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
