[tool.poetry]
name = "advent-of-code"
version = "1.0.0"
description = "Memories of Advent of Code"
authors = ["prgpascal <leschiutta.ricc@gmail.com>"]
packages = [
    { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^2.1.9"
argparse = "^1.4.0"
numpy = "^1.23.4"
print-tree2 = "^0.9.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pylint = "^2.15.5"
black = "^22.10.0"
